# paddle

./: CMakeLists.txt
app/: CMakeLists.txt  PMainWindow.cpp  PMainWindow.h  PMainWindow.h.autosave  main.cpp
app/PVtkViewDemo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
app/PWidgetsDemo/: CMakeLists.txt  icons.qrc  main.cpp
lib/: CMakeLists.txt
lib/PCore/: CMakeLists.txt
lib/PCore/parameter/: PAbstractParameter.cpp  PAbstractParameter.h  PAbstractParameter_p.h  PBoolGroup.cpp  PBoolGroup.h  PBoolParameter.cpp  PBoolParameter.h  PDoubleParameter.cpp  PDoubleParameter.h  PIntParameter.cpp  PIntParameter.h  PParameterPool.cpp  PParameterPool.h  PStringParameter.cpp  PStringParameter.h
lib/PCore/parameter/private/: PAbstractParameter_p.h  PBoolParameter_p.h  PParameterPool_p.h
lib/PCore/tests/: CMakeLists.txt
lib/PCore/tests/parameter/: PAbstractParameterTest.cpp  PAbstractParameterTest.h  PBoolGroupTest.cpp  PBoolGroupTest.h  PBoolParameterTest.cpp  PBoolParameterTest.h  PDoubleParameterTest.cpp  PDoubleParameterTest.h  PIntParameterTest.cpp  PIntParameterTest.h  PParameterPoolTest.cpp  PParameterPoolTest.h  PStringParameterTest.cpp  PStringParameterTest.h
lib/PVtkView/: CMakeLists.txt  PQtVtkGraphicsItem.cpp  PQtVtkGraphicsItem.h  PQtVtkGraphicsView.cpp  PQtVtkGraphicsView.h  PQtVtkGraphicsView.h.autosave  PQtVtkInteractorAdapter.cpp  PQtVtkInteractorAdapter.h  PVtkGraphicsItem.cpp  PVtkGraphicsItem.h  PVtkGraphicsView.cpp  PVtkGraphicsView.h  PVtkInteractorAdapter.cpp  PVtkInteractorAdapter.h  PVtkView.cpp  PVtkView.h
lib/PWidget/: CMakeLists.txt
lib/PWidgets/: CMakeLists.txt
lib/PWidgets/parameter/: PAbstractParameterPresenter.cpp  PAbstractParameterPresenter.h  PBoolPresenter.cpp  PBoolPresenter.h  PDoublePresenter.cpp  PDoublePresenter.h  PIntPresenter.cpp  PIntPresenter.h
lib/PWidgets/parameter/private/: PAbstractParameterPresenter_p.h
